--- a/org.css
+++ b/org.css
@@ -19,11 +19,6 @@ html {
   top: 12px;
   left: 20px; }
 
-#translate {
-  position: absolute;
-  left: 30px;
-  top: 150px; }
-
 #buttons {
   display: block;
   font-size: 1.2em;
@@ -170,11 +165,7 @@ pre {
     width: 500px; }
   #main-image {
     float: right;
-    width: 500px; }
-  body {
-    padding: 20px;
-    margin-left: 50px;
-    margin-right: 30px; } }
+    width: 500px; } }
 
 @media (min-width: 800px) and (max-width: 1000px) {
   #screenshot {
@@ -183,12 +174,6 @@ pre {
   #main-image {
     float: right;
     width: 450px; } }
-
-@media (min-width: 850px) and (max-width: 1000px) {
-  body {
-    padding: 10px;
-    margin-left: 25px;
-    margin-right: 15px; } }
 
 @media (max-width: 800px) {
   #screenshot {
@@ -207,3 +192,31 @@ pre {
 @media (min-width: 900px) {
   code {
     font-size: 85%; } }
+
+/* new content */
+:root {
+  --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
+  --body-left: 0px;
+  --body-right: 0px;
+  --body-padding: 5px; }
+  @media (min-width: 850px) and (max-width: 1000px) {
+    :root {
+      --body-left: 25px;
+      --body-right: 15px;
+      --body-padding: 10px; } }
+  @media (min-width: 1000px) {
+    :root {
+      --body-left: 50px;
+      --body-right: 30px;
+      --body-padding: 20px; } }
+  @media (min-width: 1600px) {
+    :root {
+      --body-left: 80px;
+      --body-right: 50px;
+      --body-padding: 30px; } }
+
+body {
+  margin-top: 2em;
+  margin-left: var(--body-left);
+  margin-right: var(--body-right);
+  padding: var(--body-padding); }
