--- a/org.scss
+++ b/org.scss
@@ -194,11 +194,6 @@ pre {
         float: right;
         width: 500px;
     }
-    body {
-        padding: 20px;
-        margin-left: 50px;
-        margin-right: 30px;
-    }
 }
 
 @media(min-width:800px) and (max-width:1000px){
@@ -212,14 +207,6 @@ pre {
     }
 }
 
-@media(min-width:850px) and (max-width:1000px){
-    body {
-        padding: 10px;
-        margin-left: 25px;
-        margin-right: 15px;
-    }
-}
-
 @media(max-width:800px){
     #screenshot {
         display: none;
@@ -229,21 +216,50 @@ pre {
     }
 }
 
-@media(max-width:800px){
-    code{
+code{
+    @media(max-width:800px){
         font-size: 85%;
     }
-}
-
-@media(min-width:800px) and (max-width:900px){
-    code{
+    @media(min-width:800px) and (max-width:900px){
         font-size: 75%;
     }
+    @media(min-width:900px){
+        font-size: 85%;
+    }
 }
 
-@media(min-width:900px){
-    code{
-        font-size: 85%;
+/* new content */
+
+:root {
+    --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
+    // body margins and padding
+    --body-left: 0px;
+    --body-right: 0px;
+    --body-padding: 5px;
+    @media(min-width:850px) and (max-width:1000px){
+        --body-left: 25px;
+        --body-right: 15px;
+        --body-padding: 10px;
+    }
+    @media(min-width:1000px){
+        --body-left: 50px;
+        --body-right: 30px;
+        --body-padding: 20px;
+    }
+    @media(min-width:1600px){
+        --body-left: 80px;
+        --body-right: 50px;
+        --body-padding: 30px;
+    }
+}
+
+body {
+    margin-top: 2em;
+    margin-left: var(--body-left);
+    margin-right: var(--body-right);
+    padding: var(--body-padding);
+}
+
 nav#main {
     background-color: #77aa99;
     border-bottom: 1px solid #587e71;
