--- a/org.scss
+++ b/org.scss
@@ -5,16 +5,6 @@ html {
     font: 300 .9em/1.6em "Droid Serif", "Open Sans", Cambria, Georgia, "DejaVu Serif", serif;
 }
 
-#top {
-    margin-top: 0pt;
-    padding-right: 10em;
-    font-size: 1.4em;
-}
-
-#top2 {
-    font-size:70%;
-}
-
 #searchgmane {
     margin-left: 10pt;
 }
@@ -311,4 +301,45 @@ nav#main {
             color: #111;
         }
     }
+}
+
+nav + div.banner {
+    margin-top: calc(0.9rem + 8px - var(--body-padding));
+}
+
+div.banner {
+    margin-left: calc(-130px - var(--body-left) - var(--body-padding));
+    width: calc(100vw - 10px);
+    padding: 20px 0 10px 0;
+    text-align: center;
+    font-size: 1.2rem;
+    h2 {
+        margin-bottom: 1em;
+        color: #5a8073;
+        img {
+            height: 2.5em;
+            margin-bottom: -0.5em;
+        }
+    }
+    p {
+        max-width: 1000px;
+        margin: auto;
+        line-height: 1.4;
+    }
+    &.large {
+        padding: 50px 0 80px 0;
+        background-color: #fff;
+        font-size: 2rem;
+    }
+    &.slim {
+        padding: 5px 0 5px 0;
+        font-size: 1.1rem;
+        background-color: #77aa99cc;
+        font-family: var(--sans);
+    }
+}
+
+img.inline {
+    height: 1em;
+    margin-bottom: -0.2em;
 }
