Place nav on top of page

--- a/org.css
+++ b/org.css
@@ -225,7 +225,8 @@ nav#main {
   position: fixed;
   width: 100%;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 1; }
   nav#main a {
     padding: 10px;
     text-decoration: none;
