--- a/org.scss
+++ b/org.scss
@@ -263,6 +263,7 @@ nav#main {
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 1;
     a {
         padding: 10px;
         text-decoration: none;
