--- a/org.scss
+++ b/org.scss
@@ -304,7 +304,7 @@ nav#main {
     }
 }
 
-nav + div.banner {
+nav + div.banner.large {
     margin-top: calc(0.9rem + 8px - var(--body-padding));
 }
 
@@ -334,7 +334,7 @@ div.banner {
     }
     &.slim {
         padding: 5px 0 5px 0;
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         font-family: var(--sans);
     }
     &.green {
