--- a/org.css
+++ b/org.css
@@ -65,6 +65,7 @@ h3 {
   box-shadow: 1px 1px 1px #aaa;
   padding: 5pt;
   width: 27em;
+  max-width: 80%;
   font-size: 85%;
   margin-top: 20pt; }
 
@@ -190,12 +191,11 @@ pre {
   --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
   --body-left: 0px;
   --body-right: 0px;
-  --body-padding: 5px; }
+  --body-padding: 10px; }
   @media (min-width: 850px) and (max-width: 1000px) {
     :root {
       --body-left: 25px;
-      --body-right: 15px;
-      --body-padding: 10px; } }
+      --body-right: 15px; } }
   @media (min-width: 1000px) {
     :root {
       --body-left: 50px;
@@ -212,6 +212,9 @@ body {
   margin-left: var(--body-left);
   margin-right: var(--body-right);
   padding: var(--body-padding); }
+  @media (max-width: 850px) {
+    body {
+      margin-top: 4em; } }
 
 nav#main {
   background-color: #77aa99;
@@ -264,7 +267,7 @@ nav + div.banner.large {
 div.banner {
   margin-left: calc(-130px - var(--body-left) - var(--body-padding));
   width: calc(100vw - 10px);
-  padding: 20px 0 10px 0;
+  padding: 20px 5px 10px 5px;
   text-align: center;
   font-size: 1.2rem; }
   div.banner h2 {
@@ -273,17 +276,25 @@ div.banner {
     div.banner h2 img {
       height: 2.5em;
       margin-bottom: -0.5em; }
+      @media (max-width: 500px) {
+        div.banner h2 img {
+          display: block;
+          position: relative;
+          left: calc(50vw - 1.25em);
+          top: -0.65em; } }
   div.banner p {
     max-width: 1000px;
     margin: auto;
     line-height: 1.4; }
   div.banner.large {
-    padding: 50px 0 80px 0;
-    background-color: #fff;
-    font-size: 2rem; }
+    padding: 50px 5px 80px 5px;
+    background-color: #fff; }
+    @media (min-width: 800px) {
+      div.banner.large {
+        font-size: 2rem; } }
   div.banner.slim {
-    padding: 5px 0 5px 0;
-    font-size: 1.5rem;
+    padding: 5px;
+    font-size: 1.2rem;
     font-family: var(--sans); }
   div.banner.green {
     background-color: #77aa99cc; }
@@ -291,12 +302,16 @@ div.banner {
       color: #222; }
       div.banner.green a.hover {
         opacity: 0.9; }
+  div.banner p.small {
+    font-size: 0.7em; }
 
 img.inline {
   height: 1em;
   margin-bottom: -0.2em; }
 
 #a-quote {
-  font-size: 0.7em;
   font-style: italic;
   opacity: 0.7; }
+
+h2[id]:target {
+  padding-top: calc(40px + 2rem); }
