--- a/org.css
+++ b/org.css
@@ -212,6 +212,12 @@ pre {
 * {
   box-sizing: border-box; }
 
+html {
+  scroll-behavior: smooth; }
+  @media screen and (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto; } }
+
 body {
   margin-top: 2em;
   margin-left: var(--body-left);
