--- a/org.css
+++ b/org.css
@@ -89,7 +89,8 @@ h2 {
 *.outline-2 img {
   box-shadow: 5px 5px 5px #aaa;
   /* margin-top: -35px; */
-  margin-left: 50px; }
+  margin-left: 50px;
+  max-width: 80%; }
 
 .iframe {
   float: right; }
@@ -154,28 +155,29 @@ div.side-fig {
   margin: auto;
   display: flex;
   flex-wrap: wrap-reverse;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  justify-content: space-evenly;
   position: relative;
   padding-top: 4rem; }
-  @media (max-width: 1510px) {
-    div.side-fig {
-      justify-content: center; } }
   div.side-fig h2 {
-    width: 100%;
     position: absolute;
     top: 0;
+    width: 100%;
     left: 0;
     text-align: center; }
     div.side-fig h2:target {
       top: calc(-10px - 2rem); }
   div.side-fig > div.outline-text-2 > figure {
-    max-width: 700px; }
+    width: min(700px, 100vw);
+    margin: 10px 0; }
     @media (min-width: 850px) {
       div.side-fig > div.outline-text-2 > figure {
-        max-width: min(700px, 50vw); } }
+        width: min(700px, 50vw); } }
     div.side-fig > div.outline-text-2 > figure img {
-      margin-left: 0;
-      width: 100%; }
+      width: 100%;
+      max-height: 500px;
+      object-fit: contain;
+      object-position: right center; }
   div.side-fig > div.outline-text-2 .move {
     position: absolute;
     top: 5rem;
@@ -246,15 +248,13 @@ body {
   margin-left: var(--body-left);
   margin-right: var(--body-right);
   padding: var(--body-padding); }
-  @media (max-width: 850px) {
-    body {
-      margin-top: 4em; } }
 
 nav#main {
   background-color: var(--green);
   padding: 8px;
   margin-bottom: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: 0.9em;
   font-family: var(--sans);
   /* fix the position for now - easy solution */
@@ -264,23 +264,23 @@ nav#main {
   left: 0;
   z-index: 1; }
   nav#main a {
-    padding: 10px;
+    padding: 0 10px;
     text-decoration: none;
     font-weight: 500;
     color: #fff; }
     nav#main a:hover {
       color: #eee; }
-  nav#main img {
-    height: 2em;
-    margin-bottom: -0.5em; }
-    nav#main img + p {
-      display: inline-block;
-      font-weight: 700;
-      margin: 0;
-      color: #333; }
+  nav#main p {
+    display: inline-block;
+    font-weight: 700;
+    margin: 0;
+    color: #333; }
+    nav#main p img {
+      height: 2em;
+      margin-bottom: -0.5em; }
   nav#main #translate {
-    position: relative;
-    float: left;
+    position: absolute;
+    left: 1em;
     color: #5a8073;
     font-weight: bold; }
     nav#main #translate a {
@@ -291,22 +291,65 @@ nav#main {
       nav#main #translate a:hover {
         color: #ddd; }
   nav#main .view-source {
-    position: relative;
-    float: right;
+    position: absolute;
+    right: 1em;
+    align-self: center;
     color: #466259;
     font-weight: bold;
     line-height: 1.8;
     padding: 0 4px 2px 4px;
-    margin-right: 1em;
     border: none;
     background: #fff;
     border-radius: 2px; }
     nav#main .view-source:hover {
       background: #eee;
       color: #304840; }
+  nav#main label, nav#main input {
+    display: none; }
+  @media (max-width: 850px) {
+    nav#main {
+      flex-direction: column; }
+      nav#main label {
+        display: block;
+        font-weight: 700;
+        color: #fff;
+        line-height: 1;
+        font-size: 1.6em;
+        margin-bottom: -1.15em; }
+      nav#main p {
+        align-self: center;
+        margin-bottom: -0.4em; }
+      nav#main a, nav#main #translate {
+        display: none;
+        align-self: center; }
+      nav#main #translate {
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 2.2em;
+        line-height: 2.1;
+        text-align: right;
+        padding-right: 1em;
+        background-color: #fff4; }
+      nav#main a.view-source {
+        position: initial;
+        right: unset;
+        align-self: baseline;
+        background-color: transparent;
+        position: relative;
+        top: 0.35em;
+        font-style: 0.7em;
+        margin-left: 10pt; }
+        nav#main a.view-source::after {
+          content: ' view source';
+          font-weight: 400; }
+      nav#main input:checked ~ a, nav#main input:checked ~ #translate {
+        display: block; }
+      nav#main input:checked ~ #translate a {
+        display: inline-block; } }
 
 nav + div.banner.large {
-  margin-top: calc(0.9rem + 8px - var(--body-padding)); }
+  margin-top: calc(-1rem - var(--body-padding)); }
 
 div.banner {
   margin-left: calc(-130px - var(--body-left) - var(--body-padding));
