--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local("Droid Serif Regular"), local("DroidSerif-Regular"), url(/fonts/droid-serif.woff2) format("woff2");
+  src: local("Droid Serif Regular"), local("DroidSerif-Regular"), url(/resources/fonts/droid-serif.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
 @font-face {
@@ -11,21 +11,21 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local("Droid Serif Italic"), local("DroidSerif-Italic"), url(/fonts/droid-serif-italic.woff2) format("woff2");
+  src: local("Droid Serif Italic"), local("DroidSerif-Italic"), url(/resources/fonts/droid-serif-italic.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
 @font-face {
   font-family: 'Droid Sans Mono';
   font-style: normal;
   font-weight: 400;
-  src: local("Droid Sans Mono Regular"), local("DroidSansMono-Regular"), url(/fonts/droid-sans-mono.woff2) format("woff2");
+  src: local("Droid Sans Mono Regular"), local("DroidSansMono-Regular"), url(/resources/fonts/droid-sans-mono.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
 @font-face {
   font-family: 'Droid Sans';
   font-style: normal;
   font-weight: 400;
-  src: local("Droid Sans Regular"), local("DroidSans-Regular"), url(/fonts/droid-sans.woff2) format("woff2");
+  src: local("Droid Sans Regular"), local("DroidSans-Regular"), url(/resources/fonts/droid-sans.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
 html {
