--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -451,6 +451,14 @@ div.banner {
     padding: 20px 5px 10px 5px;
     text-align: center;
     font-size: 1.2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    #a-quote {
+        flex-basis: 100%;
+        max-width: none;
+    }
     .title {
         display: flex;
         flex-wrap: wrap;
