--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -353,8 +353,9 @@ nav#main {
         font-weight: 700;
         color: #fff;
         line-height: 1;
-        font-size: 1.6em;
-        margin-bottom: -1.15em; }
+        font-size: 1.6em; }
+      nav#main > a:first-of-type {
+        margin-top: -1.8em; }
       nav#main p {
         align-self: center;
         margin-bottom: -0.4em; }
@@ -386,7 +387,6 @@ nav#main {
         display: block; }
       nav#main input:checked ~ #translate a {
         display: inline-block; } }
-
 nav + div.banner.large {
   margin-top: calc(-1rem - var(--body-padding)); }
 
@@ -410,16 +410,22 @@ div.banner {
     div.banner .title img {
       height: 20rem;
       margin-bottom: -0.5em; }
+      @media (max-width: 850px) {
+        div.banner .title img {
+          max-height: 10rem; } }
     div.banner .title h2 {
       color: #eee;
       font-family: var(--sans);
-      font-size: 4em;
+      font-size: 3em;
       text-align: left;
       line-height: 1.2;
       margin-left: 0.2em; }
+      @media (max-width: 850px) {
+        div.banner .title h2 {
+          font-size: 2em; } }
       div.banner .title h2 p.subtitle {
         color: #222;
-        font-size: 3rem;
+        font-size: 0.5em;
         max-width: 15em;
         text-align: left; }
   div.banner p {
@@ -429,9 +435,12 @@ div.banner {
   div.banner.large {
     padding: 50px 5px 80px 5px;
     background-color: var(--green); }
-    @media (min-width: 800px) {
+    @media (min-width: 850px) {
       div.banner.large {
         font-size: 2rem; } }
+    @media (max-width: 850px) {
+      div.banner.large {
+        padding-top: 10px; } }
   div.banner.slim {
     padding: 5px;
     font-size: 1.2rem;
