Features: make text on left, image on right
Because we read LTR, mirroring that flow makes sense.

--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -218,7 +218,7 @@ div.side-fig {
     margin: auto;
     display: flex;
     flex-wrap: wrap-reverse;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: space-evenly;
     position: relative;
     padding-top: 5rem;
