--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -192,7 +192,7 @@ div.side-fig {
   margin: auto;
   display: flex;
   flex-wrap: wrap-reverse;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: space-evenly;
   position: relative;
   padding-top: 5rem; }
