--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -235,7 +235,7 @@ div.side-fig {
     > div.outline-text-2 { // figure & move
         > figure {
             width: #{"min(700px, 100vw)"};
-            margin: 10px 0;
+            margin: 26px 0 10px 0;
             @media(min-width:850px) {
                 width: #{"min(700px, 50vw)"};
             }
